# opentrons-protocol-compiler

./: .gitignore  LICENSE  PRD.md  PROJECT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-brief.yml
benchmarks/: bench.py  simulate_corpus.py
examples/: cherry_pick.yaml  dose_response.yaml  pcr_setup.yaml  picklist.csv  plate_normalization.yaml  reformat_96_to_384.yaml
examples/bad/: capacity_over_tip.yaml  capacity_over_well.yaml  empty_source.yaml
scripts/: verify.sh
src/pipettec/: __init__.py  cli.py  compiler.py  labware_defs.py
src/pipettec/codegen/: __init__.py  emit.py
src/pipettec/ir/: __init__.py  graph.py
src/pipettec/passes/: __init__.py  multichannel_pack.py  pipeline.py  reagent_batch.py  source_reorder.py  tip_reuse.py
src/pipettec/render/: __init__.py  deck.py  heatmap.py
src/pipettec/report/: __init__.py  metrics.py
src/pipettec/spec/: __init__.py  echo.py  models.py  templates.py  yaml_spec.py
src/pipettec/validate/: __init__.py  diagnostics.py  validator.py
tests/: conftest.py  test_codegen_snapshot.py  test_integration.py  test_ir.py  test_passes.py  test_property.py  test_property_invalid.py  test_property_simulate.py  test_spec.py  test_validator.py
tests/corpus/: test_corpus.py
tests/snapshots/: cherry_pick.py  dose_response.py  pcr_setup.py  picklist.py  plate_normalization.py  reformat_96_to_384.py
web/: index.html
