[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pipettec"
version = "0.1.0"
description = "A compiler for liquid-handling protocols: high-level spec -> validated, tip-optimized Opentrons OT-2 protocol."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "PipetteC" }]
dependencies = [
    "opentrons>=8.8,<9",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
pipettec = "pipettec.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = ["tests/snapshots"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
packages = ["pipettec"]
mypy_path = "src"
disallow_untyped_defs = true
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["pipettec"]
branch = true

[tool.coverage.report]
show_missing = true
